More example updates

--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -51,7 +51,6 @@
    "source": [
     "import os\n",
     "os.environ['DEBUG']=\"1\"\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
@@ -135,13 +134,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'model': ['gpt-3.5-turbo', 'gpt-3.5-turbo-0613'], 'messages': [[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]], 'temperature': [1.0], 'top_p': [1.0], 'n': [1], 'stream': [False], 'stop': [None], 'max_token': [inf], 'presence_penalty': [0], 'frequency_penalty': [0], 'logit_bias': [None]}\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -172,15 +164,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>0.000005</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000006</td>\n",
        "      <td>gpt-3.5-turbo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000004</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -192,9 +184,9 @@
        "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
        "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
        "\n",
-       "           response(s)   latency               model  \n",
-       "0  [George Washington]  0.000005  gpt-3.5-turbo       \n",
-       "1  [George Washington]  0.000003  gpt-3.5-turbo-0613  "
+       "         response(s)   latency               model  \n",
+       "0  George Washington  0.000006  gpt-3.5-turbo       \n",
+       "1  George Washington  0.000004  gpt-3.5-turbo-0613  "
       ]
      },
      "metadata": {},
@@ -241,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "023d6c281d3e4639a78a0b3a6041fa3a",
+       "model_id": "2f62fdfea6b540059a496e977dd8dfbe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,52 +285,6 @@
        "\n",
        "   feedback  \n",
        "0  0         "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gpt-3.5-turbo</th>\n",
-       "      <th>feedback</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                                                       gpt-3.5-turbo  \\\n",
-       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
-       "\n",
-       "   feedback  \n",
-       "0  1         "
       ]
      },
      "metadata": {},
