--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -211,8 +211,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>0.000025</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000004</td>\n",
        "      <td>0.0</td>\n",
        "      <td>gpt-3.5-turbo</td>\n",
        "      <td>0.0</td>\n",
@@ -220,7 +220,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>[George Washington]</td>\n",
+       "      <td>George Washington</td>\n",
        "      <td>0.000003</td>\n",
        "      <td>0.0</td>\n",
        "      <td>gpt-3.5-turbo</td>\n",
@@ -229,8 +229,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000002</td>\n",
        "      <td>0.0</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "      <td>0.0</td>\n",
@@ -238,7 +238,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>[George Washington]</td>\n",
+       "      <td>George Washington</td>\n",
        "      <td>0.000002</td>\n",
        "      <td>0.0</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
@@ -255,11 +255,11 @@
        "2  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
        "3  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
        "\n",
-       "           response(s)   latency  similar_to_expected               model  \\\n",
-       "0  [George Washington]  0.000025  0.0                  gpt-3.5-turbo        \n",
-       "1  [George Washington]  0.000003  0.0                  gpt-3.5-turbo        \n",
-       "2  [George Washington]  0.000003  0.0                  gpt-3.5-turbo-0613   \n",
-       "3  [George Washington]  0.000002  0.0                  gpt-3.5-turbo-0613   \n",
+       "         response(s)   latency  similar_to_expected               model  \\\n",
+       "0  George Washington  0.000004  0.0                  gpt-3.5-turbo        \n",
+       "1  George Washington  0.000003  0.0                  gpt-3.5-turbo        \n",
+       "2  George Washington  0.000002  0.0                  gpt-3.5-turbo-0613   \n",
+       "3  George Washington  0.000002  0.0                  gpt-3.5-turbo-0613   \n",
        "\n",
        "   temperature  \n",
        "0  0.0          \n",
