Json/python eval functions

--- a/examples/notebooks/StructuredOutput.ipynb
+++ b/examples/notebooks/StructuredOutput.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c02b0509",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ab7b247c",
    "metadata": {},
@@ -20,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5e5b81b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -38,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +55,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "df3934db",
    "metadata": {},
@@ -69,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0841dd5",
    "metadata": {},
    "outputs": [],
@@ -80,7 +75,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7b106a04",
    "metadata": {},
@@ -89,7 +83,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e43545ff",
    "metadata": {},
@@ -99,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dbab6b3e",
    "metadata": {},
    "outputs": [],
@@ -109,7 +102,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9d152fdf",
    "metadata": {},
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b3086e6",
    "metadata": {},
    "outputs": [],
@@ -134,7 +126,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e6f5463a",
    "metadata": {},
@@ -144,17 +135,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "84304957",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Generate valid JSON from the following input: The task is to count all the words in a string</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Generate valid JSON from the following input: The task is to add up numbers 1 to 100</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Generate valid python to complete the following task: The task is to count all the words in a string</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Generate valid python to complete the following task: The task is to add up numbers 1 to 100</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                 prompt  \\\n",
+       "0  Generate valid JSON from the following input: The task is to count all the words in a string           \n",
+       "1  Generate valid JSON from the following input: The task is to add up numbers 1 to 100                   \n",
+       "2  Generate valid python to complete the following task: The task is to count all the words in a string   \n",
+       "3  Generate valid python to complete the following task: The task is to add up numbers 1 to 100           \n",
+       "\n",
+       "             response(s)   latency  \n",
+       "0  \\n\\nGeorge Washington  0.000004  \n",
+       "1  \\n\\nGeorge Washington  0.000002  \n",
+       "2  \\n\\nGeorge Washington  0.000002  \n",
+       "3  \\n\\nGeorge Washington  0.000002  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b35caa9a",
    "metadata": {},
@@ -164,18 +227,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fc2f1bde",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>Generate valid JSON from the following input: {{input}}</th>\n",
+       "      <th>Generate valid python to complete the following task: {{input}}</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_input</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'The task is to add up numbers 1 to 100'}</th>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'The task is to count all the words in a string'}</th>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "prompt_template                                             Generate valid JSON from the following input: {{input}}  \\\n",
+       "user_input                                                                                                            \n",
+       "{'input': 'The task is to add up numbers 1 to 100'}          \\n\\nGeorge Washington                                    \n",
+       "{'input': 'The task is to count all the words in a string'}  \\n\\nGeorge Washington                                    \n",
+       "\n",
+       "prompt_template                                             Generate valid python to complete the following task: {{input}}  \n",
+       "user_input                                                                                                                   \n",
+       "{'input': 'The task is to add up numbers 1 to 100'}          \\n\\nGeorge Washington                                           \n",
+       "{'input': 'The task is to count all the words in a string'}  \\n\\nGeorge Washington                                           "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize(pivot=True)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -184,7 +307,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
@@ -194,42 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "63de3014",
    "metadata": {},
    "outputs": [],
    "source": [
     "from prompttools.utils import validate_json\n",
-    "from prompttools.utils import validate_python\n",
-    "\n",
-    "def extract_responses(output) -> str:\n",
-    "    rsps = [choice[\"text\"].strip() for choice in output[\"choices\"]]\n",
-    "    return rsps\n",
-    "\n",
-    "\n",
-    "def is_json(\n",
-    "    input_pair: Tuple[str, Dict[str, str]], results: Dict, metadata: Dict\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    A simple test that checks semantic similarity between the user input\n",
-    "    and the model's text responses.\n",
-    "    \"\"\"\n",
-    "    validations = [validate_json.validate(response) for response in extract_responses(results)]\n",
-    "    return min(validations)\n",
-    "\n",
-    "def is_python(\n",
-    "    input_pair: Tuple[str, Dict[str, str]], results: Dict, metadata: Dict\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    A simple test that checks semantic similarity between the user input\n",
-    "    and the model's text responses.\n",
-    "    \"\"\"\n",
-    "    validations = [validate_python.validate(response) for response in extract_responses(results)]\n",
-    "    return min(validations)\n"
+    "from prompttools.utils import validate_python"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -239,15 +335,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "233f25a6",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>is_json</th>\n",
+       "      <th>is_python</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Generate valid JSON from the following input: The task is to count all the words in a string</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Generate valid JSON from the following input: The task is to add up numbers 1 to 100</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Generate valid python to complete the following task: The task is to count all the words in a string</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Generate valid python to complete the following task: The task is to add up numbers 1 to 100</td>\n",
+       "      <td>\\n\\nGeorge Washington</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                 prompt  \\\n",
+       "0  Generate valid JSON from the following input: The task is to count all the words in a string           \n",
+       "1  Generate valid JSON from the following input: The task is to add up numbers 1 to 100                   \n",
+       "2  Generate valid python to complete the following task: The task is to count all the words in a string   \n",
+       "3  Generate valid python to complete the following task: The task is to add up numbers 1 to 100           \n",
+       "\n",
+       "             response(s)   latency  is_json  is_python  \n",
+       "0  \\n\\nGeorge Washington  0.000004  0.0      0.0        \n",
+       "1  \\n\\nGeorge Washington  0.000002  0.0      0.0        \n",
+       "2  \\n\\nGeorge Washington  0.000002  0.0      0.0        \n",
+       "3  \\n\\nGeorge Washington  0.000002  0.0      0.0        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "harness.evaluate(\"is_json\", is_json)\n",
-    "harness.evaluate(\"is_python\", is_python)\n",
+    "harness.evaluate(\"is_json\", validate_json.evaluate)\n",
+    "harness.evaluate(\"is_python\", validate_python.evaluate)\n",
     "harness.visualize()"
    ]
   },
