--- a/examples/notebooks/ChromaDBExperiment.ipynb
+++ b/examples/notebooks/ChromaDBExperiment.ipynb
@@ -113,16 +113,17 @@
    },
    "outputs": [],
    "source": [
-    "from chromadb.utils import embedding_functions\n",
-    "\n",
     "chroma_client = chromadb.Client()\n",
+    "# You can also create and use `chromadb.PersistentClient` or `chromadb.HttpClient`\n",
+    "TEST_COLLECTION_NAME = \"TEMPORARY_COLLECTION\"\n",
     "try:\n",
-    "    chroma_client.delete_collection(\"Temp\")\n",
+    "    chroma_client.delete_collection(TEST_COLLECTION_NAME)\n",
     "except Exception:\n",
     "    pass\n",
-    "collection_name = \"Temp\"\n",
+    "collection_name = TEST_COLLECTION_NAME\n",
     "\n",
     "use_existing_collection = False  # Specify that we want to create a collection during the experiment\n",
+    "\n",
     "# Documents that will be added into the database\n",
     "add_to_collection_params = {\n",
     "    \"documents\": [\"This is a document\", \"This is another document\", \"This is the document.\"],\n",
@@ -134,12 +135,13 @@
     "query_collection_params = {\"query_texts\": [\"This is a query document\", \"This is a another query document\"]}\n",
     "\n",
     "\n",
+    "# Set up the experiment\n",
     "experiment = ChromaDBExperiment(chroma_client,\n",
     "                                collection_name,\n",
+    "                                use_existing_collection,\n",
     "                                query_collection_params,\n",
     "                                emb_fns,\n",
     "                                emb_fns_names,\n",
-    "                                use_existing_collection,\n",
     "                                add_to_collection_params,\n",
     "                               )\n",
     "\n"
@@ -321,16 +323,20 @@
    "source": [
     "import scipy.stats as stats\n",
     "\n",
-    "EXPECTED_RANKING = [\"id1\", \"id3\", \"id2\"]\n",
+    "# For each query, you can define what the expected ranking is.\n",
+    "EXPECTED_RANKING = {\n",
+    "    \"This is a query document\" : [\"id1\", \"id3\", \"id2\"],\n",
+    "    \"This is a another query document\" : [\"id2\", \"id3\", \"id1\"],\n",
+    "}\n",
     "\n",
     "def measure_correlation(\n",
-    "    input_query: list[dict[str, str]], results: dict, metadata: dict\n",
+    "    input_query: str, results: dict, metadata: dict\n",
     ") -> float:\n",
     "    \"\"\"\n",
-    "    A simple test that checks semantic similarity between the user input\n",
-    "    and the model's text responses.\n",
+    "    A simple test that compares the expected ranking for a given query with the actual ranking produced\n",
+    "    by the embedding function being tested.\n",
     "    \"\"\"\n",
-    "    correlation, _ = stats.spearmanr(results['ids'][0], EXPECTED_RANKING)\n",
+    "    correlation, _ = stats.spearmanr(results['ids'][0], EXPECTED_RANKING[input_query])\n",
     "    return correlation"
    ]
   },
@@ -403,7 +409,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>This is a another query document</td>\n",
        "      <td>[[id2, id3, id1]]</td>\n",
@@ -421,7 +427,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.5</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>default</td>\n",
        "      <td>This is a another query document</td>\n",
        "      <td>[[id2, id1, id3]]</td>\n",
@@ -435,9 +441,9 @@
       "text/plain": [
        "   ranking_correlation                 embed_fn  \\\n",
        "0  1.0                  paraphrase-MiniLM-L3-v2   \n",
-       "1  0.5                  paraphrase-MiniLM-L3-v2   \n",
+       "1  1.0                  paraphrase-MiniLM-L3-v2   \n",
        "2  1.0                  default                   \n",
-       "3 -0.5                  default                   \n",
+       "3 -1.0                  default                   \n",
        "\n",
        "                        query_texts        top doc ids  \\\n",
        "0  This is a query document          [[id1, id3, id2]]   \n",
