Update examples and table

--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
+    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of the USA?\"}]"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "                                               \"text-davinci-003\", \n",
     "                                               prompt_templates, \n",
     "                                               user_inputs,\n",
-    "                                               model_arguments={\"temperature\": 0.9})"
+    "                                               model_arguments={\"temperature\": 1.0})"
    ]
   },
   {
@@ -167,43 +167,49 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>1.121741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>Answer the following question: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
+       "      <td>0.911955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
+       "      <td>1.021080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>Respond the following query: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "      <td>1.274893</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                 prompt  \\\n",
-       "0  Answer the following question: Who was the first president?            \n",
-       "1  Answer the following question: Who was the first president of India?   \n",
-       "2  Respond the following query: Who was the first president?              \n",
-       "3  Respond the following query: Who was the first president of India?     \n",
+       "                                                                   prompt  \\\n",
+       "0  Answer the following question: Who was the first president?              \n",
+       "1  Answer the following question: Who was the first president of the USA?   \n",
+       "2  Respond the following query: Who was the first president?                \n",
+       "3  Respond the following query: Who was the first president of the USA?     \n",
        "\n",
-       "               response(s)   latency  \n",
-       "0  [\\n\\nGeorge Washington]  0.000004  \n",
-       "1  [\\n\\nGeorge Washington]  0.000003  \n",
-       "2  [\\n\\nGeorge Washington]  0.000002  \n",
-       "3  [\\n\\nGeorge Washington]  0.000002  "
+       "                                                                           response(s)  \\\n",
+       "0  \\n\\nThe first president of the United States was George Washington.                   \n",
+       "1  \\n\\nThe first president of the United States was George Washington, who served from   \n",
+       "2  \\n\\nThe first president of the United States was George Washington. He took office    \n",
+       "3  \\n\\nThe first President of the United States was George Washington, who was inaug     \n",
+       "\n",
+       "    latency  \n",
+       "0  1.121741  \n",
+       "1  0.911955  \n",
+       "2  1.021080  \n",
+       "3  1.274893  "
       ]
      },
      "metadata": {},
@@ -263,29 +269,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>{'input': 'Who was the first president of India?'}</th>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <th>{'input': 'Who was the first president of the USA?'}</th>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>{'input': 'Who was the first president?'}</th>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "prompt_template                                    Answer the following question: {{input}}  \\\n",
-       "user_input                                                                                    \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nGeorge Washington]                   \n",
-       "{'input': 'Who was the first president?'}           [\\n\\nGeorge Washington]                   \n",
+       "prompt_template                                                                                  Answer the following question: {{input}}  \\\n",
+       "user_input                                                                                                                                  \n",
+       "{'input': 'Who was the first president of the USA?'}  \\n\\nThe first president of the United States was George Washington, who served from   \n",
+       "{'input': 'Who was the first president?'}             \\n\\nThe first president of the United States was George Washington.                   \n",
        "\n",
-       "prompt_template                                    Respond the following query: {{input}}  \n",
-       "user_input                                                                                 \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nGeorge Washington]                \n",
-       "{'input': 'Who was the first president?'}           [\\n\\nGeorge Washington]                "
+       "prompt_template                                                                                   Respond the following query: {{input}}  \n",
+       "user_input                                                                                                                                \n",
+       "{'input': 'Who was the first president of the USA?'}  \\n\\nThe first President of the United States was George Washington, who was inaug   \n",
+       "{'input': 'Who was the first president?'}             \\n\\nThe first president of the United States was George Washington. He took office  "
       ]
      },
      "metadata": {},
@@ -379,47 +385,53 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>1.121741</td>\n",
+       "      <td>0.275267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Answer the following question: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
+       "      <td>0.911955</td>\n",
+       "      <td>0.344860</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
+       "      <td>1.021080</td>\n",
+       "      <td>0.341740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Respond the following query: Who was the first president of the USA?</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "      <td>1.274893</td>\n",
+       "      <td>0.336985</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                 prompt  \\\n",
-       "0  Answer the following question: Who was the first president?            \n",
-       "1  Answer the following question: Who was the first president of India?   \n",
-       "2  Respond the following query: Who was the first president?              \n",
-       "3  Respond the following query: Who was the first president of India?     \n",
+       "                                                                   prompt  \\\n",
+       "0  Answer the following question: Who was the first president?              \n",
+       "1  Answer the following question: Who was the first president of the USA?   \n",
+       "2  Respond the following query: Who was the first president?                \n",
+       "3  Respond the following query: Who was the first president of the USA?     \n",
        "\n",
-       "               response(s)   latency  similar_to_expected  \n",
-       "0  [\\n\\nGeorge Washington]  0.000004  0.0                  \n",
-       "1  [\\n\\nGeorge Washington]  0.000003  0.0                  \n",
-       "2  [\\n\\nGeorge Washington]  0.000002  0.0                  \n",
-       "3  [\\n\\nGeorge Washington]  0.000002  0.0                  "
+       "                                                                           response(s)  \\\n",
+       "0  \\n\\nThe first president of the United States was George Washington.                   \n",
+       "1  \\n\\nThe first president of the United States was George Washington, who served from   \n",
+       "2  \\n\\nThe first president of the United States was George Washington. He took office    \n",
+       "3  \\n\\nThe first President of the United States was George Washington, who was inaug     \n",
+       "\n",
+       "    latency  similar_to_expected  \n",
+       "0  1.121741  0.275267             \n",
+       "1  0.911955  0.344860             \n",
+       "2  1.021080  0.341740             \n",
+       "3  1.274893  0.336985             "
       ]
      },
      "metadata": {},
